--- a/gradle.properties
+++ b/gradle.properties
@@ -6,11 +6,11 @@ org.gradle.parallel=true
 # check these on https://fabricmc.net/develop
 minecraft_version=1.20.1
 yarn_mappings=1.20.1+build.10
-loader_version=0.16.14
+loader_version=0.16.13
 loom_version=1.10-SNAPSHOT
 
 # Mod Properties
-mod_version=beta0.1-1.20.1
+mod_version=1.0-1.20.1
 maven_group=net.hexcodemagenta.ordnance
 archives_base_name=ordnance
 
